--- a/tools/mserver/Makefile.ag
+++ b/tools/mserver/Makefile.ag
@@ -29,6 +29,7 @@ headers_pdf = {
 	DIR = datadir/doc/MonetDB-client-tools
 }
 
+# see clients/mapiclient/Makefile.ag for use of logo file
 headers_png = {
 	HEADERS = png
 	SOURCES = monetdblogo.png
