--- a/clients/R/MonetDB.R/DESCRIPTION
+++ b/clients/R/MonetDB.R/DESCRIPTION
@@ -6,7 +6,8 @@ Authors@R: c(person("Hannes Muehleisen", role = c("aut", "cre"),email = "hannes@
 	person("Anthony Damico", role = "ctb"))
 Author: Hannes Muehleisen [aut, cre], Thomas Lumley [ctb], Anthony Damico [ctb]
 Maintainer: Hannes Muehleisen <hannes@cwi.nl>
-Depends: DBI (>= 0.3.1), digest (>= 0.6.4), methods, R (>= 3.1.1), codetools
+Depends: DBI (>= 0.3.1)
+Imports: digest (>= 0.6.4), methods, codetools
 Enhances: dplyr (>= 0.3.0)
 Description: Allows to pull data from MonetDB into R. Includes a DBI implementation and a dplyr backend.
 License: MPL (== 1.1)
