--- a/debian/control
+++ b/debian/control
@@ -95,6 +95,7 @@ Description: MonetDB client/server interface library development files
 Package: monetdb-client
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: monetdb5-sql
 Description: MonetDB database client
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -221,6 +222,8 @@ Description: MonetDB5 SQL GIS support module
 Package: monetdb5-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
+Recommends: monetdb5-server-hugeint, monetdb5-sql
+Suggests: monetdb-client
 Description: MonetDB database server version 5
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -258,6 +261,8 @@ Description: MonetDB database server version 5
 Package: monetdb5-sql
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-server (= ${source:Version})
+Recommends: monetdb5-sql-hugeint
+Suggests: monetdb-client
 Description: MonetDB SQL support for monetdb5
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
