Package Mac OS X packaging instructions.

--- a/Makefile.ag
+++ b/Makefile.ag
@@ -16,7 +16,7 @@ SUBDIRS = buildtools common clients \
 EXTRA_DIST = bootstrap configure configure.ac configure.ag libversions \
 			 MonetDB.spec rpm.mk.in COPYING README license.txt HowToStart.rst
 
-EXTRA_DIST_DIR = NT debian
+EXTRA_DIST_DIR = NT debian MacOSX
 
 headers_config = {
 	DIR = includedir/monetdb
