--- a/clients/mapiclient/Makefile.ag
+++ b/clients/mapiclient/Makefile.ag
@@ -5,7 +5,7 @@
 # Copyright 2008-2015 MonetDB B.V.
 
 MTSAFE
-INCLUDES = ../mapilib ../../common/options ../../common/stream ../../common/utils ../R/MonetDB.R/src $(READLINE_INCS)
+INCLUDES = ../mapilib ../../common/options ../../common/stream ../../common/utils $(READLINE_INCS)
 
 lib_mcutil = {
 	NOINST
@@ -13,7 +13,7 @@ lib_mcutil = {
 }
 
 bin_mclient = {
-	SOURCES = mclient.c ReadlineTools.c ReadlineTools.h mapisplit-dummy.c profiler-dummy.c
+	SOURCES = mclient.c ReadlineTools.c ReadlineTools.h
 	LIBS = libmcutil ../mapilib/libmapi \
 		../../common/stream/libstream \
 		$(READLINE_LIBS) \
