--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -45,7 +45,8 @@ lib__sql = {
 		sql_cast_impl_up_to_flt.h \
 		sql_cast_impl_up_to_int.h \
 		sql_round.c sql_round_impl.h sql_bat2time.c \
-		sql_fround.c sql_fround_impl.h
+		sql_fround.c sql_fround_impl.h \
+		sql_rank.c sql_rank.h
 	LIBS = ../../server/libsqlserver \
 		   ../../storage/libstore \
 		   ../../storage/bat/libbatstore \
