Ignore generate Java target and bin directories

--- a/.hgignore
+++ b/.hgignore
@@ -65,7 +65,8 @@ lex.yy.c
 *.gem
 # java:
 *.jar
-java/target/classes/nl/cwi/monetdb/jdbc/MonetDriver.java.in
+java/target
+java/bin
 # python:
 dist
 
