Make POM more Maven central compatible Move Java sources to standard mvn location src/main/java Adjust the build.xml to the new location Use the Ant generated MonetDriver.java via the Ant run plugin

--- a/.hgignore
+++ b/.hgignore
@@ -65,8 +65,10 @@ lex.yy.c
 *.gem
 # java:
 *.jar
+java/build
 java/target
 java/bin
+java/src/main/java/nl/cwi/monetdb/jdbc/MonetDriver.java
 # python:
 dist
 
