--- a/java/pom.xml
+++ b/java/pom.xml
@@ -57,27 +57,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<configuration>
-							<target>
-								<ant antfile="${basedir}/build.xml" target="driver" />
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
+					<includes>
+						<include>nl/cwi/monetdb/jdbc/**/*.java</include>
+					</includes>
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
@@ -94,6 +80,12 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<includes>
+						<include>nl/cwi/monetdb/jdbc/**/*.java</include>
+						<include>nl/cwi/monetdb/mcl/**/*.java</include>
+					</includes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -107,6 +99,12 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<sourceFileIncludes>
+						<include>nl/cwi/monetdb/jdbc/**/*.java</include>
+						<include>nl/cwi/monetdb/mcl/**/*.java</include>
+					</sourceFileIncludes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
