--- a/java/pom.xml
+++ b/java/pom.xml
@@ -52,6 +52,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jdbc.sources>nl/cwi/monetdb/jdbc/**/*.java</jdbc.sources>
+		<mcl.sources>nl/cwi/monetdb/mcl/**/*.java</mcl.sources>
 	</properties>
 
 	<build>
@@ -62,8 +64,8 @@
 				<version>3.2</version>
 				<configuration>
 					<includes>
-						<include>nl/cwi/monetdb/jdbc/**/*.java</include>
-						<include>nl/cwi/monetdb/mcl/**/*.java</include>
+						<include>${jdbc.sources}</include>
+						<include>${mcl.sources}</include>
 					</includes>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -83,8 +85,8 @@
 				</executions>
 				<configuration>
 					<includes>
-						<include>nl/cwi/monetdb/jdbc/**/*.java</include>
-						<include>nl/cwi/monetdb/mcl/**/*.java</include>
+						<include>${jdbc.sources}</include>
+						<include>${mcl.sources}</include>
 					</includes>
 				</configuration>
 			</plugin>
@@ -102,8 +104,8 @@
 				</executions>
 				<configuration>
 					<sourceFileIncludes>
-						<include>nl/cwi/monetdb/jdbc/**/*.java</include>
-						<include>nl/cwi/monetdb/mcl/**/*.java</include>
+						<include>${jdbc.sources}</include>
+						<include>${mcl.sources}</include>
 					</sourceFileIncludes>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
