--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -3525,6 +3525,8 @@ def main(argv) :
              'use multiple dbfarms (developers only)'),
             ('nomito', None, 'nomito', None,
              'Do not pass --forcemito to server'),
+            ('jenkins', None, 'jenkins', None,
+             'special handling for Jenkins'),
             ]
 
     if THISFILE == 'Mtest.py':
@@ -3604,6 +3606,7 @@ def main(argv) :
     releaserun = opts.get('releaserun', releaserun)
     nomito = opts.get('nomito', False)
     CONDITIONALS['RELEASERUN'] = releaserun
+    jenkins = False
     if THISFILE == "Mtest.py":
         _IGNORE = dftIGNORE
         par['IGNORE'] = opts.get('ignore', _IGNORE)
@@ -3645,6 +3648,7 @@ def main(argv) :
         a = opts.get('multifarm')
         if a is not None:
             env['MULTIFARM'] = 'True'
+        jenkins = opts.get('jenkins', False)
     if THISFILE == 'Mapprove.py':
         a = opts.get('ext')
         if a is None:
@@ -4266,6 +4270,8 @@ VALUES (%s, '%s', '%s', '%s',
 
  After that, re-run Mtest.
 """ % os.path.join(TSTTRGBASE, TSTPREF, "index.html")
+                if jenkins:
+                    sys.exit(0)
                 sys.exit(1)
             else:
                 if quiet:
