--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -326,7 +326,10 @@ CONDITIONALS = {
     'HAVE_JDBCTESTS_JAR'   : "",
     'HAVE_JDBCTESTS_DIR'   : "",
     'HAVE_JDBCTESTS'       : "",
+    'HAVE_PHP'             : "",
+    'HAVE_RUBY'            : "",
     'MERCURIAL'            : "",
+    'RELEASERUN'           : "",
 }
 
 # a bunch of classes to help with generating (X)HTML files
