added the lidar vault

--- a/sql/backends/monet5/vaults/Makefile.ag
+++ b/sql/backends/monet5/vaults/Makefile.ag
@@ -19,7 +19,8 @@ INCLUDES = ../../../include \
 	   ../../../../common/stream \
 	   ../../../../common/utils \
 	   ../../../../gdk \
-	   $(READLINE_INCS) $(cfitsio_CFLAGS) $(curl_CFLAGS) $(netcdf_CFLAGS)
+	   $(READLINE_INCS) $(cfitsio_CFLAGS) $(curl_CFLAGS) $(netcdf_CFLAGS) \
+	   $(LIBLAS_INCS)
 
 lib__vault = {
 	MODULE
@@ -107,7 +108,38 @@ headers_netcdfautoload = {
 	SOURCES = 74_netcdf.mal
 }
 
+lib__lidar = {
+	MODULE
+	COND = HAVE_LIDAR
+	DIR = libdir/monetdb5
+	SOURCES = lidar.c
+	LIBS = ../../../../monetdb5/tools/libmonetdb5 \
+	       $(LIBLAS_LIBS)
+}
+
+headers_lidarmal = {
+	COND = HAVE_LIDAR
+	HEADERS = mal
+	DIR = libdir/monetdb5
+	SOURCES = lidar.mal
+}
+
+headers_lidarsql = {
+	COND = HAVE_LIDAR
+	HEADERS = sql
+	DIR = libdir/monetdb5/createdb
+	SOURCES = 75_lidar.sql
+}
+
+headers_lidarautoload = {
+	COND = HAVE_LIDAR
+	HEADERS = mal
+	DIR = libdir/monetdb5/autoload
+	SOURCES = 75_lidar.mal
+}
+
 EXTRA_DIST_DIR = Tests
 EXTRA_DIST = 70_vault.mal vault.mal vault.sql vault.h \
 	     72_fits.mal fits.mal 72_fits.sql fits.h \
-	     74_netcdf.mal netcdf.mal 74_netcdf.sql netcdf_vault.h 
+	     74_netcdf.mal netcdf.mal 74_netcdf.sql netcdf_vault.h \
+	     75_lidar.mal  lidar.mal  75_lidar.sql  lidar.h
