Remove non-used code. The role and inclusion of a http-daemain is left for the future.

--- a/monetdb5/mal/Makefile.ag
+++ b/monetdb5/mal/Makefile.ag
@@ -9,8 +9,7 @@ INCLUDES = ../../common/options \
 		   ../../common/utils \
 		   ../../clients/mapilib \
 		   ../../gdk \
-		   $(READLINE_INCS) \
-		   $(libmicrohttpd_CFLAGS)
+		   $(READLINE_INCS) 
 MTSAFE
 
 lib_mal = {
@@ -26,7 +25,6 @@ lib_mal = {
 		mal_exception.c mal_exception.h \
 		mal_factory.c mal_factory.h \
 		mal_function.c mal_function.h \
-		mal_http_daemon.c mal_http_daemon.h \
 		mal_import.c mal_import.h \
 		mal_runtime.c mal_runtime.h \
 		mal_instruction.c mal_instruction.h \
