--- a/NT/monetdb_config.h.in
+++ b/NT/monetdb_config.h.in
@@ -57,6 +57,12 @@
 
 #include <assert.h>
 
+#if _MSC_VER <= 1800
+/* From Visual Studio 2013, the compiler undetstands __func__, before
+ * that we need __FUNCTION__ */
+#define __func__ __FUNCTION__
+#endif
+
 /* indicate to sqltypes.h that windows.h has already been included and
    that it doesn't have to define Windows constants */
 #define ALREADY_HAVE_WINDOWS_TYPE 1
